--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,11 +45,11 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=false
 
 ############# Mail Properties ###########################################
-#spring.mail.host=smtp.mailtrap.io
-#spring.mail.port=25
-#spring.mail.username=
-#spring.mail.password=
-#spring.mail.protocol=smtp
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=
+spring.mail.password=
+spring.mail.protocol=smtp
 ############ JWT Properties #####################
 jwt.expiration.time=90000
 
