--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,5 +51,5 @@ spring.mail.username=
 spring.mail.password=
 spring.mail.protocol=smtp
 ############ JWT Properties #####################
-jwt.expiration.time=90000
+jwt.expiration.time=9000000
 
