--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.datasource.password=0
 
 # create!!
 #spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 # Spring загрузки автоматически создает схему внедренного DataSource.
 # Такое поведение может быть настроено с помощью spring.datasource.initialization-режим
 # Свойство (и это может также быть всегда или никогда). resources/schema.sql
