--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "@tinymce/tinymce-angular": "^4.2.0",
     "bootstrap": "^4.5.3",
     "ngx-toastr": "^13.1.0",
@@ -34,6 +35,7 @@
     "@angular-devkit/build-angular": "^0.1100.2",
     "@angular/cli": "~10.1.3",
     "@angular/compiler-cli": "~10.1.3",
+    "@angular/localize": "^10.1.6",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
