--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <version>2.3.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>app.web.pavelk.read1</groupId>
     <artifactId>9758Read1JavaSpringTSAngular</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -63,10 +64,10 @@
         </dependency>
 
         <!--        thymeleaf-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-thymeleaf</artifactId>-->
+<!--        </dependency>-->
 
         <!--        web-->
         <dependency>
