--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,7 +12,7 @@ spring:
       fail-on-empty-beans: false
 
   datasource:
-    initialization-mode: always
+#    initialization-mode: always
 
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/read2
