--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,7 +21,8 @@ spring:
     initialization-mode: always
 
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/read2
+#    url: jdbc:postgresql://localhost:5432/read2
+    url: jdbc:postgresql://localhost:5433/read4
     username: postgres
     password: 0
 
